if 'lsx' in enabled_targets
  orc_sources += files(
    'orcloongarch.c',
    'orclsx.c',
    'orclsxcompiler.c',
    'orclsxrules.c',
    'orclsxtarget.c',
    'orclsxinsn.c',
    'orcloongarchinsn.c',
    'orcloongarchcompiler.c',
  )
endif

if 'lasx' in enabled_targets
  orc_sources += files(
    'orclasx.c',
    'orclasxcompiler.c',
    'orclasxrules.c',
    'orclasxinsn.c',
    'orclasxtarget.c',
  )
endif
